--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "http-errors": "~1.6.3",
     "jade": "^1.9.2",
     "mongodb": "^5.3.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "promise": "^8.3.0"
   }
 }
